--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,12 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
+# Habilita el soporte RGB
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_LED_COUNT=27
+
+# (Opcional) Brillo y velocidad
+CONFIG_ZMK_RGB_UNDERGLOW_BRIGHTNESS_STEP=10
+CONFIG_ZMK_RGB_UNDERGLOW_SATURATION_STEP=10
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=10
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
