--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,7 @@
 include:
   - board: nice_nano_v2
     shield: corne_left
+    config: config/corne_left.keymap
     cmake-args: >
       -DCONFIG_ZMK_DISPLAY=y
       -DCONFIG_ZMK_RGB_UNDERGLOW=y
@@ -9,6 +10,7 @@ include:
 
   - board: nice_nano_v2
     shield: corne_right
+    config: config/corne_right.keymap
     cmake-args: >
       -DCONFIG_ZMK_DISPLAY=y
       -DCONFIG_ZMK_RGB_UNDERGLOW=y
